Revision history for {{$dist->name}}:

{{$NEXT}}

v0.11.1   2023-10-28 08:43:52+01:00 Europe/London
  [Tests]
  - Migrated to Test2.

v0.11.0   2023-08-03 17:29:24+01:00 Europe/London
  [Exhancements]
  - Added the exchange_prefixes rule.

  [Documentation]
  - Support policy for older Perls is documented.

v0.10.1   2023-05-06 11:18:22+01:00 Europe/London
  [Exhancements]
  - Added .c and .cc to the script_extensions rule.

  [Documentation]
  - Fixed typos in POD.

v0.10.0   2023-02-22 10:56:42+00:00 Europe/London
  [Exhancements]
  - Added document_extensions rule.

  - Added .rdg, .tml and .toml to the misc_extensions rule.

  - Added .csc to the script_extensions rule.

v0.9.1    2023-01-10 10:55:57+00:00 Europe/London
  No changes since v0.9.0.

v0.9.0    2023-01-05 09:27:11+00:00 Europe/London (TRIAL RELEASE)
  [Incompatible Changes]
  - Minimum Perl version is v5.14.

  [Documentation]
  - Bumped copyright year.

  - Documented support for older Perl versions.

v0.8.3    2022-12-22 14:03:34+00:00 Europe/London
  [Enhancements]
  - Added php: to the protocol_in_path_or_referer rule.

  [Documentation]
  - Added missing item to Changes for v0.8.2.

v0.8.2    2022-12-12 16:40:09+00:00 Europe/London
  [Enhancements]
  - Added .config to the misc_extensions rule.

  - Added docroot, ftproot, webroot, inetpub to the cms_prefixes rule.

  - Added adm to the system_dirs rule.

  [Documentation]
  - Fixed typo in Changes.

  [Tests]
  - Fix dependency for Test::Vars.

  [Other]
  - Added GitHub Actions to run tests.

v0.8.1    2022-07-05 12:06:58+01:00 Europe/London
  [Enhancements]
  - Added .bz2 to archive_extensions rule.

  - Updated backup_files rule.

  - Added Windows META-INF and OS/X __MACOSX to system_dirs rule.

  [Toolchain]
  - Sign release.

v0.8.0    2022-06-21 16:36:30+01:00 Europe/London
  [Enhancements]
  - Added .bkp, .backup, .npb, .old, .psb and .psc to the misc_extensions rule.

  - Added cms_prefixes rule.

  - Added backup_files rule.
