@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}:
 
 {{$NEXT}}
+  [Exhancements]
+  - Added the script_injection rule.
 
 v0.11.1   2023-10-28 08:43:52+01:00 Europe/London
   [Tests]
